picture+nav alignment fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,19 +3,23 @@
 }
 
 header {
-    display: inline;
+    display: block;
+  /*   width: 1452px;
+    height: 60px; */
 }
 .logo {
-    font-family: "Montserrat", sans-serif;
+    display: inline-block;
+    vertical-align: top;
+    font-family: "Figtree", sans-serif; /*Circular std not aviable in google fonts
+    this was reccomended instead.*/
+    margin-top: 37px;
+    margin-left: 80px;
+    margin-bottom: 0;
     font-weight: 900;
     font-size: 30px;
     line-height: 160%;
     letter-spacing: -0.02em;
-    color: #0a1b32;
-    margin-top: 37px;
-    margin-left: 80px;
-    float: left;
-    display: inline-block;
+    color: #0a1b32;  
 }
 .logo-dot {
     color: #33a2e0;
@@ -28,14 +32,15 @@ a:link {
     color: #1b0a42;
 }
 .nav {
+    display: inline-flex;
+    vertical-align: top;
+    margin-top: 48px;
+    margin-left: 98px;
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
     text-align: center;
-    margin-top: 48px;
-    margin-left: 98px;
-    display: inline-block;
 }
 #about, #contact{
     margin-left: 38px;
@@ -45,19 +50,22 @@ a:link {
 }
 
 .login {
-    float: right;
     display: inline-block;
+    vertical-align: top;
 }
 .sign-in {
+    margin-left: 689px;
+    margin-top: 48px;
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
     text-align: center;
-    margin-right: 40px;
-    margin-top: 48px;
+
 }
 .sign-up-btn {
+    margin-top: 30px;
+    margin-left: 40px;
     border-radius: 6px;
     border-color: #33a2e0;
     border-style: solid;
@@ -70,25 +78,33 @@ a:link {
     line-height: 150%;
     letter-spacing: 0.02em;
     text-align: center;
-    margin-top: 30px;
-    margin-right: 68px;
 }
 
+.main-content {
+    display: block;
+    margin-top: 143px;
+    margin-left: 191px;
+    width: 1364px;
+    height: 543px;
+}
 .content-text {
-    float: left;
     display: inline-block;
+    float: left;
+    padding-top: 60px;
+    width: 372px;
+    height: 583px;
 }
 h1 {
+    margin: 0px;
+    margin-left: 9px;
     font-family: "Ramaraja", serif;
     font-weight: 400;
     font-size: 72px;
     line-height: 106%;
     letter-spacing: 0.02em;
     color: #1b0a42;
-    margin-left: 200px;
-    margin-top: 209px;
-    max-width: 495px;
-    width: 100%;
+    width: 500px; /*somehow it doesn't want to me on one line
+    if you follow the measurements of 495px*/
 }
 .main-text {
     font-weight: 400;
@@ -96,12 +112,12 @@ h1 {
     line-height: 160%;
     letter-spacing: 0.02em;
     color: #9a9a9a;
-    margin-left: 191px;
-    margin-top: 11px;
-    max-width: 583px;
-    width: 100%;
+    width: 540px; /* Also wierd, the width doesn't check out with
+     the one in the fig document. Wrong page break happens. */
+    height: 96px;
 }
 .learn-more-btn {
+    margin-left: 9px;
     border-radius: 6px;
     border-color: #33a2e0;
     border-style: solid;
@@ -114,15 +130,13 @@ h1 {
     line-height: 200%;
     letter-spacing: 0.02em;
     text-align: center;
-    margin-left: 200px;
-    margin-bottom: 267px;
 }
 
 #meditation {
-    margin-right: 45px;
-    margin-bottom: 156px;
     display: inline-block;
     float: right;
-    max-width: 796px;
-    width: 100%;
+    height: 543px;
+    width: 796px;
+
+    
 }
